	std : bugfix in utf8_compare (https://github.com/HaxeFoundation/haxe/issues/5308)
	ssl : handle MBEDTLS_ERR_SSL_PEER_CLOSE_NOTIFY (#150)
	ssl : allow partial failure on loading certificates (#160)
	mysql : use eof terminated string when appropriated (#159)
	jit : disable jit for win64, which never worked

2016-05-08 : 2.1.0
	all : switched to use CMake for building (#122)
	mod_neko/tora : use remote_ip (fixes Apache 2.2 returning 0.0.0.0 in 64 bits ?)
	std : added buffer_get_length
	std : added socket_send_to and socket_recv_from for UDP, added socket_set_keepalive
	all : increased max codesize from 65K opcodes to 1M
	nekoc : allow break/continue in try/catch
	std : bugfix in utf8_compare
	vm : added $sget16/$sget32/$sgetf/$sgetd, $sset16/$sset32/$ssetf/$ssetd, and $itof/$itod/$ftoi/$dtoi
	vm : bugfix with arrays/strings having length >128MB 
	jit : bugfix on some GCC versions causing invalid array access
	std : fixed escaping of arguments in process_run
	all : nekotools boot executable can now be safely striped on Linux (#86)
	all : nekotools boot now looks for the Neko VM binary in cwd, $loader.path, and PATH in order (#110)
	std : added epoll support (#67)
	all : libneko can now be loaded from current directory
	all : libneko is now versioned
	vm : comparisons with NaN and Int/Float now always returns false
	api : added kind_lookup (#6)
	mod_neko/tora : distribute ndlls compiled against Apache 2.4 (can still manually compile against Apache 2.2)
	mysql : use MariaDB's LGPL connector/c instead of MySQL's GPL connector/c (can still use MySQL for compilation)
	all : copyright to Haxe Foundation instead of Nicolas and other license clean up (#102)
	
2013-02-23 : 2.0.0
	all : changed license to MIT
	mod_neko+mod_tora : fixed issue with get_client_ip in 64 bits mode /gcc
	mysql : added support for timestamp to date conversion
	std : added merge_sort native implementation
	std : added mem_local_size
	regexp : fix in regexp_match, ^ no longer match if pos > 0