@@ -27,7 +27,7 @@
 // original code by Steve Reid
 
 #define rol(value, bits) (((value) << (bits)) | ((value) >> (32 - (bits))))
-#ifdef TARGET_BIG_ENDIAN
+#ifdef NEKO_BIG_ENDIAN
 #	define blk0(i) block[i]
 #else
 #	define blk0(i) (block[i] = (rol(block[i],24)&0xFF00FF00) \
