@@ -41,7 +41,7 @@
 #	include <sys/time.h>
 #	include <sys/times.h>
 #	include <sys/wait.h>
-#ifdef HAVE_XLOCALE_H
+#ifdef NEKO_XLOCALE_H
 #	include <xlocale.h>
 #else
 #	include <locale.h>
