@@ -36,7 +36,7 @@ DEFINE_KIND(neko_kind_module);
 #endif
 
 /* *_TO_LE(X) converts (X) to little endian. */
-#ifdef TARGET_LITTLE_ENDIAN
+#ifdef NEKO_LITTLE_ENDIAN
 #	define LONG_TO_LE(X) (X)
 #	define SHORT_TO_LE(X) (X)
 #else
@@ -85,7 +85,7 @@ extern value neko_alloc_module_function( void *m, int_val pos, int nargs );
 extern void neko_module_jit( neko_module *m );
 
 EXTERN int neko_is_big_endian() {
-#ifdef TARGET_LITTLE_ENDIAN
+#ifdef NEKO_LITTLE_ENDIAN
 	return 0;
 #else
 	return 1;
